--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
-        <div class="olas">
-           <img src="images\stars.jpg" class="cielo">
-          <div class="texto-saludo">
-            <h2>bienvenido</h2>
-            <h2>bienvenido</h2>
-            <h2>bienvenido</h2>
-         </div>
-           <img src="images\boat.png" class="barco">
-            <div class="ola" id="ola1"></div> 
-            <div class="ola" id="ola2"></div>
-            <div class="ola" id="ola3"></div>
-            <div class="ola" id="ola4"></div>    
-            <div class="color-fondo"> </div>
-        </div>
-    </section>
+    <div class="principal">
+        <section>
+            <div class="olas">
+            <img src="images\stars.jpg" class="cielo">
+            <div class="texto-saludo">
+                <h2>bienvenido</h2>
+                <h2>bienvenido</h2>
+                <h2>bienvenido</h2>
+            </div>
+            <img src="images\boat.png" class="barco">
+                <div class="ola" id="ola1"></div> 
+                <div class="ola" id="ola2"></div>
+                <div class="ola" id="ola3"></div>
+                <div class="ola" id="ola4"></div>    
+                <div class="color-fondo"> </div>
+            </div>
+        </section>
+    </div>
+    <div class="contenido"></div>    
 </body>
 </html>
