Cards con animacion para seccion de proyectos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section>
             <div class="olas">
             <img src="images\stars.jpg" class="cielo">
-            <div class="texto-saludo">
+            <div>
                 <h2>bienvenido</h2>
                 <h2>bienvenido</h2>
                 <h2>bienvenido</h2>
@@ -25,6 +25,30 @@
             </div>
         </section>
     </div>
-    <div class="contenido"></div>    
+    <div class="proyectos">
+        <h1>MIS PROYECTOS</h1>
+    </div>
+    <div class="tarjetas">
+        <div class="contenedor">
+                    <div class="card" style="--i:-2">
+                        <div class="contenido" style="--j:1">
+                        <h3>Card 1</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio cupiditate nobis accusantium molestiae aliquam odit, delectus ex atque fuga. Blanditiis quod earum ea architecto veniam nesciunt consequuntur recusandae animi ipsum!</p>
+                        </div>
+                    </div>
+                    <div class="card" style="--i:-1">
+                        <div class="contenido" style="--j:2">
+                        <h3>Card 2</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio cupiditate nobis accusantium molestiae aliquam odit, delectus ex atque fuga. Blanditiis quod earum ea architecto veniam nesciunt consequuntur recusandae animi ipsum!</p>
+                        </div>
+                    </div>
+                    <div class="card" style="--i:0">
+                        <div class="contenido" style="--j:3">
+                        <h3>Card 3</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio cupiditate nobis accusantium molestiae aliquam odit, delectus ex atque fuga. Blanditiis quod earum ea architecto veniam nesciunt consequuntur recusandae animi ipsum!</p>
+                        </div>
+                    </div>
+            </div>   
+        </div> 
 </body>
 </html>
