Agregado de contenido en las cards, nuevo sector para las tecnologias debajo del submarino

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="principal">
@@ -25,6 +26,9 @@
             </div>
         </section>
     </div>
+    <DIV class="proyectos">
+        <h1>INFORMACIÓN PERSONAL</h1>
+    </DIV>
     <div class="proyectos">
         <h1>MIS PROYECTOS</h1>
     </div>
@@ -32,23 +36,45 @@
         <div class="contenedor">
                     <div class="card" style="--i:-2">
                         <div class="contenido" style="--j:1">
-                        <h3>Card 1</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio cupiditate nobis accusantium molestiae aliquam odit, delectus ex atque fuga. Blanditiis quod earum ea architecto veniam nesciunt consequuntur recusandae animi ipsum!</p>
+                            <div class="contenedor-iconos">
+                                <i class="fa-solid fa-tree-city fa-lg" style="color: #2098fc;"></i>
+                            </div>
+                        <h3>STREET ART TOUR BA</h3>
+                        <p>Aplicación web, sistema que administra distintos puntos estratégicos
+                            de la ciudad de Buenos Aires y permite a los artistas callejeros
+                            registrarse para presentar espectáculos allí, reglados por el estado.
+                            Además, permite a espectadores ajenos al sistema rastrear a un artista
+                            que hayan presenciado con anterioridad si está registrado en el
+                            sistema, y a su vez, al administrador realizar las permitentes acciones
+                            de control de usuarios.</p>
+                            <a href=""></a>
                         </div>
                     </div>
                     <div class="card" style="--i:-1">
                         <div class="contenido" style="--j:2">
-                        <h3>Card 2</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio cupiditate nobis accusantium molestiae aliquam odit, delectus ex atque fuga. Blanditiis quod earum ea architecto veniam nesciunt consequuntur recusandae animi ipsum!</p>
+                            <div class="contenedor-iconos">
+                                <i class="fa-solid fa-cart-flatbed fa-lg" style="color: #3484fc;"></i>
+                            </div>
+                        <h3>CARRITO DE COMPRAS</h3>
+                        <p>Aplicación web que simula una landing page comercial, con la opción de agregar productos a un carro de compras y luego nos permite visualizarlos. Además, posee una barra de navegación donde se puede ver la cantidad de elementos que se van agregando.</p>
                         </div>
                     </div>
                     <div class="card" style="--i:0">
                         <div class="contenido" style="--j:3">
-                        <h3>Card 3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio cupiditate nobis accusantium molestiae aliquam odit, delectus ex atque fuga. Blanditiis quod earum ea architecto veniam nesciunt consequuntur recusandae animi ipsum!</p>
+                            <div class="contenedor-iconos">
+                                <i class="fa-solid fa-book-bookmark fa-lg" style="color: #3884fc;"></i>
+                            </div>
+                        <h3>LOS AMIGOS DE SHAKESPEARE</h3>
+                        <p>Sistema de gestión de archivos de consola programado
+                            en C++ para el segundo cuatrimestre de la carrera.
+                            Permite administrar los socios de una biblioteca local
+                            así como los libros que está contiene.</p>
                         </div>
                     </div>
             </div>   
         </div> 
+        <div class ="contenedor-submarino">
+            <img src="images/submarino.png" class="submarino">
+        </div>
 </body>
 </html>
