Tecnologias e informacion sobre mi

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
         <h1>INFORMACIÓN PERSONAL</h1>
     </DIV>
     <div class="proyectos">
+        <p>Con aproximadamente ocho años de experiencia en el rubro de atención al cliente, tanto en comercio propio como en empleos anteriores, he desarrollado una sólida base en ese ámbito. Sin embargo, siempre he sentido un gran atractivo hacia el mundo de la tecnología, lo que finalmente me impulsó a embarcarme en el estudio de la programación. Al año corriente -2023- estoy muy cerca de graduarme como técnica universitaria en la UTN Pacheco.
+            La curiosad me ha llevado, eventualmente, a explorar diversos lenguajes y tecnologías, abriendo mi estudio más allá de lo institucional a cursos y otros aprendizajes autodidactas.
+        </p>
+    </div>
+    <div class="proyectos">
+        <p>La meta actual que poseo es combinar mi experiencia en atención al cliente con mi pasión por la programación para crear soluciones tecnológicas innovadoras que mejoren la experiencia del usuario y aporten valor a las organizaciones.
+            Estoy emocionada por las oportunidades que la programación y la tecnología ofrecen, y estoy dispuesta a enfrentar nuevos desafíos y seguir aprendiendo para crecer profesionalmente en este campo en constante evolución.
+            </p>
+    </div>
+    <div class="proyectos">
         <h1>MIS PROYECTOS</h1>
     </div>
     <div class="tarjetas">
@@ -76,5 +86,55 @@
         <div class ="contenedor-submarino">
             <img src="images/submarino.png" class="submarino">
         </div>
+        <div class="tec">
+            <div class="ondeado">
+                <span style="--i:1;">T</span>
+                <span style="--i:2;">E</span>
+                <span style="--i:3;">C</span>
+                <span style="--i:4;">N</span>
+                <span style="--i:5;">O</span>
+                <span style="--i:6;">L</span>
+                <span style="--i:7;">O</span>     
+                <span style="--i:8;">G</span>   
+                <span style="--i:9;">I</span>   
+                <span style="--i:10;">A</span>      
+                <span style="--i:11;">S</span>                                                                                                                           
+            </div>
+        </div>        
+            <div class="contenedor-skills">
+                <div class="fila-skills">
+                    <div class="columna-skills">
+                        <img src="images\css.png" alt="css">
+                    </div>
+                    <div class="columna-skills">
+                        <img src="images\c-sharp.png" alt="csharp">
+                    </div>
+                    <div class="columna-skills">
+                        <img src="images\bootstrap-logo.png" alt="bootstrap">
+                    </div>
+                    <div class="columna-skills">
+                        <img src="images\800px-HTML5_Badge.svg.png" alt="html">
+                    </div>
+                    <div class="columna-skills">
+                        <img src="images\sqlpng.png" alt="sql">
+                    </div>
+                    <div class="columna-skills">
+                        <img src="images\NET.png" alt="net">
+                    </div>
+                    <div class="columna-skills">
+                        <img src="images\Visual-Studio-logo.png" alt="visual">
+                    </div>
+                    <div class="columna-skills">
+                        <img src="images\js.png" alt="js">
+                    </div>
+                    <div class="columna-skills">
+                        <img src="images\c.png" alt="c++">
+                    </div>
+                    <div class="columna-skills">
+                        <img src="images\java-logo-transparent-free-png.webp" alt="java">
+                    </div>
+                </div>
+            </div>
+        
 </body>
 </html>
