--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
             <div class="olas">
             <img src="images\stars.jpg" class="cielo">
             <div>
-                <h2>bienvenido</h2>
-                <h2>bienvenido</h2>
-                <h2>bienvenido</h2>
+                <h2>¡bienvenido!</h2>
+                <h2>¡bienvenido!</h2>
+                <h2>¡bienvenido!</h2>
+                <h2>Soy Ludmila Boffo</h2>
+                <h2>Desarrolladora fullstack</h2>
             </div>
             <img src="images\boat.png" class="barco">
                 <div class="ola" id="ola1"></div> 
@@ -26,24 +28,40 @@
             </div>
         </section>
     </div>
-    <DIV class="proyectos">
-        <h1>INFORMACIÓN PERSONAL</h1>
-    </DIV>
     <div class="proyectos">
-        <p>Con aproximadamente ocho años de experiencia en el rubro de atención al cliente, tanto en comercio propio como en empleos anteriores, he desarrollado una sólida base en ese ámbito. Sin embargo, siempre he sentido un gran atractivo hacia el mundo de la tecnología, lo que finalmente me impulsó a embarcarme en el estudio de la programación. Al año corriente -2023- estoy muy cerca de graduarme como técnica universitaria en la UTN Pacheco.
-            La curiosad me ha llevado, eventualmente, a explorar diversos lenguajes y tecnologías, abriendo mi estudio más allá de lo institucional a cursos y otros aprendizajes autodidactas.
-        </p>
+        <h1>¡Conoceme!</h1>
     </div>
-    <div class="proyectos">
+    <div ID="div-Esp">
+       <div class="proyectos">
+          <p>Con aproximadamente ocho años de experiencia en el rubro de atención al cliente, tanto en comercio propio como en empleos anteriores, he desarrollado una sólida base en ese ámbito. Sin embargo, siempre he sentido un gran atractivo hacia el mundo de la tecnología, lo que finalmente me impulsó a embarcarme en el estudio de la programación. Al año corriente -2023- estoy muy cerca de graduarme como técnica universitaria en la UTN Pacheco.
+             La curiosad me ha llevado, eventualmente, a explorar diversos lenguajes y tecnologías, abriendo mi estudio más allá de lo institucional a cursos y otros aprendizajes autodidactas.
+          </p>
+      </div>
+      <div class="proyectos">
         <p>La meta actual que poseo es combinar mi experiencia en atención al cliente con mi pasión por la programación para crear soluciones tecnológicas innovadoras que mejoren la experiencia del usuario y aporten valor a las organizaciones.
             Estoy emocionada por las oportunidades que la programación y la tecnología ofrecen, y estoy dispuesta a enfrentar nuevos desafíos y seguir aprendiendo para crecer profesionalmente en este campo en constante evolución.
             </p>
+      </div>
+ </div>
+ <div id="div-Eng">
+    <div class="proyectos">
+        <p>After over eight years of experience in the customer service field, both in my own business and in previous jobs, I have developed a strong foundation in that area. However, I have always felt a strong attraction to the world of technology, which ultimately led me to embark on the study of programming. In the current year - 2023 - I am approaching graduation. Curiosity has eventually led me to explore various
+        programming languages and technologies, expanding my studies beyond the institutional setting to include courses and other self-taught skills.        </p>
+    </div>
+    <div class="proyectos">
+        <p>My current goal is to combine my experience in customer service with my passion for programming to create innovative technological solutions that enhance the user experience and add value to companies. I am excited about the opportunities that programming and technology offer, and I am willing to take on new challenges and continue learning to grow professionally in this constantly evolving field.
+       </p>
+      </div>
+ </div>
+    <div class="boton">
+        <button id="btnEng">Read in english</button>
+        <button id="btnEsp">Leer en español</button>
     </div>
     <div class="proyectos">
         <h1>MIS PROYECTOS</h1>
     </div>
     <div class="tarjetas">
-        <div class="contenedor">
+        <div class="contenedor">            
                     <div class="card" style="--i:-2">
                         <div class="contenido" style="--j:1">
                             <div class="contenedor-iconos">
@@ -57,16 +75,35 @@
                             que hayan presenciado con anterioridad si está registrado en el
                             sistema, y a su vez, al administrador realizar las permitentes acciones
                             de control de usuarios.</p>
-                            <a href=""></a>
+                            <a href="https://github.com/ludmilaboffo/TPCuatrimestral"><i class="fa-solid fa-code-branch fa-lg" style="color: #3884fc;"></i></a>                            
+                        </div>
+                    </div>
+                    <div class="card" style="--i:-2">
+                        <div class="contenido" style="--j:1">
+                            <div class="contenedor-iconos">
+                                <i class="fa-solid fa-tree-city fa-lg" style="color: #2098fc;"></i>
+                            </div>
+                        <h3>STREET ART TOUR BA</h3>
+                        <p>Aplicación web, sistema que administra distintos puntos estratégicos
+                            de la ciudad de Buenos Aires y permite a los artistas callejeros
+                            registrarse para presentar espectáculos allí, reglados por el estado.
+                            Además, permite a espectadores ajenos al sistema rastrear a un artista
+                            que hayan presenciado con anterioridad si está registrado en el
+                            sistema, y a su vez, al administrador realizar las permitentes acciones
+                            de control de usuarios.</p>
+                            <a href="https://github.com/ludmilaboffo/TPCuatrimestral"><i class="fa-solid fa-code-branch fa-lg" style="color: #3884fc;"></i></a>                            
                         </div>
                     </div>
                     <div class="card" style="--i:-1">
                         <div class="contenido" style="--j:2">
                             <div class="contenedor-iconos">
                                 <i class="fa-solid fa-cart-flatbed fa-lg" style="color: #3484fc;"></i>
+                                <h3>CARRITO DE COMPRAS</h3>
+                                <p>Aplicación web que simula una landing page comercial, con la opción de agregar productos a un carro de compras y luego nos permite visualizarlos. Además, posee una barra de navegación donde se puede ver la cantidad de elementos que se van agregando.</p>
+                               <div class="git">
+                                <a href="https://github.com/danik363/app-CarritoCompras"><i class="fa-solid fa-code-branch fa-lg" style="color: #3884fc;"></i></a>                            
                             </div>
-                        <h3>CARRITO DE COMPRAS</h3>
-                        <p>Aplicación web que simula una landing page comercial, con la opción de agregar productos a un carro de compras y luego nos permite visualizarlos. Además, posee una barra de navegación donde se puede ver la cantidad de elementos que se van agregando.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="card" style="--i:0">
@@ -74,11 +111,12 @@
                             <div class="contenedor-iconos">
                                 <i class="fa-solid fa-book-bookmark fa-lg" style="color: #3884fc;"></i>
                             </div>
-                        <h3>LOS AMIGOS DE SHAKESPEARE</h3>
-                        <p>Sistema de gestión de archivos de consola programado
-                            en C++ para el segundo cuatrimestre de la carrera.
-                            Permite administrar los socios de una biblioteca local
-                            así como los libros que está contiene.</p>
+                            <h3>LOS AMIGOS DE SHAKESPEARE</h3>
+                            <p>Sistema de gestión de archivos de consola programado
+                                en C++ para el segundo cuatrimestre de la carrera.
+                                Permite administrar los socios de una biblioteca local
+                                así como los libros que está contiene.</p>
+                            <a href="https://github.com/ludmilaboffo/Laboratorio-II---Sistema-gestion"><i class="fa-solid fa-code-branch fa-lg" style="color: #3884fc;"></i></a>
                         </div>
                     </div>
             </div>   
@@ -135,6 +173,39 @@
                     </div>
                 </div>
             </div>
-        
+        <div class="iconos">
+            <div class="contenedor-iconito">
+                    <a href=""><i class="icon1 fa-brands fa-linkedin-in fa-xl"></i></a>
+                    <a href="https://github.com/ludmilaboffo"><i class="icon2 fab fa-github fa-xl"></i></a>
+                    <a href="#"><i class="icon3 fa-brands fa-discord fa-xl"></i></a>
+            </div>
+        </div>
+        <div class="proyectos"></div>
+        <div class="pez">
+            <img src="images\pez.png" alt="Pez" class="pez-nada">
+        </div>
+        <footer>
+            <div class="footer-content">
+                <p style="color: #fff;">© 2023 by Ludmila Boffo</p>
+            </div>
+            <div class="arena"></div>
+        </footer>
+
+        <script>
+            var btn_esp = document.getElementById("btnEsp");
+            var btn_eng = document.getElementById("btnEng");
+            var divEng = document.getElementById("div-Eng");
+            var divEsp = document.getElementById("div-Esp");
+
+            btn_eng.addEventListener('click',()=>{
+              divEsp.style.display='none';
+              divEng.style.display='block';
+            });
+
+            btn_esp.addEventListener('click',()=>{
+              divEsp.style.display='block';
+              divEng.style.display='none';
+            });
+        </script>
 </body>
 </html>
