Se agrega email

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
@@ -175,10 +175,10 @@
             </div>
         <div class="iconos">
             <div class="contenedor-iconito">
-                    <a href=""><i class="icon1 fa-brands fa-linkedin-in fa-xl"></i></a>
+                    <a href="https://www.linkedin.com/in/ludmila-boffo/"><i class="icon1 fa-brands fa-linkedin-in fa-xl"></i></a>
                     <a href="https://github.com/ludmilaboffo"><i class="icon2 fab fa-github fa-xl"></i></a>
-                    <a href="#"><i class="icon3 fa-brands fa-discord fa-xl"></i></a>
-            </div>
+                    <a href="https://discord.gg/w4Ts8wGk"><i class="icon3 fa-brands fa-discord fa-xl"></i></a>
+                </div>
         </div>
         <div class="proyectos"></div>
         <div class="pez">
@@ -186,11 +186,14 @@
         </div>
         <footer>
             <div class="footer-content">
+                <div class="email">
+                    <p>ludmilabboffo@gmail.com</p>
+                </div> 
                 <p style="color: #fff;">© 2023 by Ludmila Boffo</p>
             </div>
             <div class="arena"></div>
         </footer>
-
+        
         <script>
             var btn_esp = document.getElementById("btnEsp");
             var btn_eng = document.getElementById("btnEng");
